ghc-4335c07/testsuite/tests/indexed-types/should_fail/TyFamArity2.hs
{-# LANGUAGE TypeFamilies #-}

type family T a :: * -> *
type instance T Int Float = Char   -- must fail: extra arguments
